Some backend and frontend changes done

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -5,9 +5,9 @@
         <div>
           <h1>Online Exam</h1>
         </div>
-        <button mat-icon-button (click)="snav.toggle()">
+        <!-- <button mat-icon-button (click)="snav.toggle()">
           <mat-icon>menu</mat-icon>
-        </button>
+        </button> -->
       </div>
 
     </mat-toolbar>
