--- a/Frontend/src/app/masters/subjects/components/subject-add-edit/subject-add-edit.component.html
+++ b/Frontend/src/app/masters/subjects/components/subject-add-edit/subject-add-edit.component.html
@@ -25,7 +25,7 @@
       <mat-card-actions>
         <div class="mat-card-inner">
           <button type="submit" mat-flat-button color="primary"> Save</button>
-          <button type="button" mat-stroked-button color="primary"> Cancel</button>
+          <a routerLink="/setup/subject/list" mat-stroked-button color="primary"> Cancel</a>
         </div>
       </mat-card-actions>
     </mat-card>
